--- a/gradle.properties
+++ b/gradle.properties
@@ -7,9 +7,9 @@ mod_id = Pangu-Base
 mod_version = 1.0.0
 mod_group = cn.mccraft.pangu.base
 
-pangu_version = master-SNAPSHOT
+pangu_version = ca9356f93f
 
 # Minecraft & Forge
 minecraft_version = 1.12.2
 forge_version = 14.23.4.2712
-mcp_mapping_version = snapshot_20180421
+mcp_mapping_version = snapshot_20180804
